--- a/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
             <div class="header__menu">
                 <div class="row">
                     <div class="col-sm-3 col-xs-12 header__brand">
-                        <a href="~/Home/Index">
+                        <a href="@Url.Action("Index","Home")">
                             <img src="~/Content/Images/pargim-logo-1.png" />
                         </a>
                     </div>
@@ -65,8 +65,8 @@
                             </div>
 
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                                <ul class="nav navbar-nav">
-                                    <li class="dropdown active">
+                                <ul class="nav navbar-nav custom-nav">
+                                    <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Home <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -96,7 +96,6 @@
                                     </li>
                                     <li>
                                         @Html.ActionLink("Testimonial", "Testimonial","Home")
-
                                     </li>
                                     <li>
                                         @Html.ActionLink("Support Us", "Support","Home")
@@ -134,13 +133,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <h1>About Pragim Technologies</h1>
                     <p>
                         PRAGIM is known for placements in major IT companies. Major MNC's visit PRAGIM campus every week for interviews.You can contact our old students who are placed with in 1 week of completing their Training and are getting a salary ranging from Rs. 25,000 to Rs.50,000.Click Here to check out our selected trainees by different MNC's and what they say about training at PRAGIM.
                     </p>
                 </div>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <h1>Recent Courses</h1>
                     <ul>
                         <li>
@@ -182,7 +181,7 @@
                     <textarea class="form-control" placeholder="Type Your Messege" rows="5"></textarea>
                     <div class="g-recaptcha" data-sitekey="6LfKuN0UAAAAAApO_hgLfawhEPoGGn0NKrJUPMWJ"></div>
                     <br />
-                    <button class="btn btn-block btn-warning"><span class="glyphicon glyphicon-arrow-right"></span></button>
+                    <button class="btn btn-block"><span class="glyphicon glyphicon-arrow-right"></span></button>
                 </div>
             </div>
             <hr />
@@ -198,6 +197,17 @@
     @RenderSection("scripts", required: false)
 <script>
     $(document).ready(function () {
+
+        $('.btn-group button#btnAll').trigger('click');
+        $('.btn-group').on('click',
+            'button',
+            function () {
+                $('.btn-group button').removeClass('active');
+                $(this).addClass('active');
+                var filter = $(this).attr('data-filter');
+                $('.grid').isotope({ filter: filter});
+            });
+       
 
         $('.btn-subscribe').on('click',
             function () {
@@ -220,6 +230,25 @@
                     console.log(err);
                 });
             });
+
+        $('.nav li').click(function(){
+            $('.nav li').removeClass('active');
+            $(this).addClass('active');
+        });
+
+        $('.nav li.dropdown').mouseover(function () {
+            $(this).addClass('open').addClass('active');
+        });
+        $('.nav li.dropdown').mouseleave(function () {
+            $(this).removeClass('open').removeClass('active');
+        });
+
+        var url = window.location;
+
+        $('ul.nav a').filter(function () {
+            return this.href == url;
+        }).parent().addClass('active');
+
     });
 </script>
 </body>
