--- a/PragimCourses/PragimCourses/Views/Courses/Create.cshtml
+++ b/PragimCourses/PragimCourses/Views/Courses/Create.cshtml
@@ -33,7 +33,7 @@
             @Html.ValidationMessageFor(c => c.ImagePath, "", new { @class = "text-danger" })
         </div>
 
-        <button class="btn btn-default" type="submit">Save</button>
+        <button class="btn btn-primary" style="margin-bottom:35px" type="submit">Save</button>
     }
 </div>
 
