--- a/PragimCourses/PragimCourses/Views/Courses/Edit.cshtml
+++ b/PragimCourses/PragimCourses/Views/Courses/Edit.cshtml
@@ -9,6 +9,7 @@
     {
         @Html.AntiForgeryToken();
         @Html.HiddenFor(m => m.Id)
+        @Html.HiddenFor(m => m.CategoryId)
      
 
         <div class="form-group">
@@ -37,7 +38,7 @@
             @Html.ValidationMessageFor(c => c.ImagePath, "", new { @class = "text-danger" })
         </div>
 
-        <button class="btn btn-default" type="submit">Save</button>
+        <button class="btn btn-primary" style="margin-bottom:35px" type="submit">Save</button>
     }
 </div>
 @section scripts{
